--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,13 @@
-header {
 
+
+header a {
+  color: purple;
+  text-decoration: none;
+}
+
+header a:hover {
+  color: purple;
+  text-decoration: none;
 }
 
 .search-div {
@@ -16,3 +24,40 @@ header {
 input {
   width: 250px;
 }
+
+.search-div h3 {
+  color: white;
+}
+
+img {
+  /*height: 150px;*/
+}
+ .returned-result {
+   padding: 20px;
+   margin-top: 50px;
+   transition: ease .5s;
+ }
+
+ .returned-result:hover {
+   border-radius: 5px;
+   background-color: rgba(128, 0, 128, .5);
+   /*transform: scale(1.1);*/
+   transition: ease .5s;
+ }
+
+ .returned-result a {
+   color: purple;
+ }
+
+ .returned-result:hover a {
+   color: white;
+   text-decoration: none
+ }
+
+ .movie-detail {
+   margin-top: 50px;
+ }
+
+ .movie-detail h1 {
+   margin-top: 0px;
+ }
